2010-04-29  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #14207: Duplicate submodule URL in JavaScript
	* Fixed bug #14026: Main module does not load different navFrames in submodules in dependency of navFrameScriptParam

2010-04-27  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14230: Match TS browser condition with all delivered browsers

2010-04-28  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #14139: condensed mode in backend does not work (thanks to Stefan Galinski)

2010-04-27  Steffen Kamper  <info@sk-typo3.de>

	* Follow-up to bug #14201: getBrowserInfo delivers wrong info
	* Fixed bug #14201: getBrowserInfo delivers wrong info
	* Fixed bug #14137: Startup in module does not work (thanks to Stefan Galinski)

2010-04-27  Susanne Moog  <typo3@susanne-moog.de>

	* Follow-up to bug #10768: CSC height 1% breaks rendering of images (thanks to Helmut Hummel)

2010-04-27  Patrick Broens  <patrick@patrickbroens.nl>

	* Fixed bug #14214: Install tool hooks are not complete and could be better 

2010-04-26  Susanne Moog  <typo3@susanne-moog.de>

	* Follow-up to bug #12908: reverted changes in CSC 4.3 folder due to new rules, added comment to IE hacks (thanks to Helmut Hummel)

2010-04-26  Christian Kuhn  <lolli@schwarzbu.ch>

	* Follow-up to bug #3977: Added unit tests for t3lib_div:mkdir() and t3lib_div::fixPermissions()
	* Fixed bug #3977: Permissions not set on extracted localization files (Thanks to Lars Houmark)

2010-04-25 Francois Suter  <francois@typo3.org>

	* Fixed bug: #14107: Scheduler: Missing Flash message in the Scheduler (thanks to Georg Ringer)

2010-04-22  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #14182: Multiple join conditions are not supported

2010-04-22 Jochen Rau <jochen.rau@typoplanet.de>

	* Fixed bug #14131: Styling of cookie warning is hardcoded (thanks to Jigal van Hemert)

2010-04-22 Jochen Rau <jochen.rau@typoplanet.de>
